// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui badge component snapshots should render danger badge 1`] = `
<div
  className="danger"
  data-jsx={1669289405}
>
  Badge
</div>
`;

exports[`ui badge component snapshots should render primary badge with only children props 1`] = `
<div
  className="primary"
  data-jsx={1669289405}
>
  Badge
</div>
`;

exports[`ui badge component snapshots should render success badge 1`] = `
<div
  className="success"
  data-jsx={1669289405}
>
  Badge
</div>
`;
